# gitcheckpoint

./: .dockerignore  .gitignore  Dockerfile  README.md  label.txt  main.py  metadata.json  pyproject.toml  requirements.txt  state.json
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: ChatPanel.jsx  ControlsBar.jsx  DiffViewer.jsx  GitGraph.jsx  ThreadSidebar.jsx  VoiceControls.jsx  VoiceOrb.jsx
frontend/src/lib/: api.js  voiceSocket.js  websocket.js
src/: config.py
src/agents/: __init__.py  conversation_agent.py  git_ops_agent.py  github_ops_agent.py
src/api/: server.py
src/checkpointer/: __init__.py  git_checkpointer.py
src/gitcheckpoint.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/graph/: __init__.py  state.py  supervisor.py
src/tools/: __init__.py  git_tools.py  github_helpers.py  github_tools.py  memory_tools.py
src/voice/: __init__.py  atoms_agent.py  audio_converter.py  command_parser.py  sentence_buffer.py  session_manager.py  tts_service.py
tests/: conftest.py  test_api.py  test_e2e_smoke.py  test_git_checkpointer.py  test_git_tools.py  test_github_tools.py  test_supervisor.py  test_voice.py
